--- a/languages/de.ini
+++ b/languages/de.ini
@@ -720,7 +720,7 @@ Refine Results = "Treffer weiter einschränken"
 Region = "Region"
 Related Author = "Ähnliche Verfasser"
 Related Items = "Ähnliche Datensätze"
-Related Subjects = "Ähnliche Schlagworte"
+Related Subjects = "Assoziierte Schlagwörter"
 Remove Filters = "Suchfilter entfernen"
 Remove from Book Bag = "Aus der Zwischenablage entfernen"
 Renewed = "Verlängert"
