--- a/languages/fr.ini
+++ b/languages/fr.ini
@@ -711,7 +711,7 @@ Refine Results = "Affiner les résultats"
 Region = Région
 Related Author = "Auteurs similaires"
 Related Items = "Exemplaires similaires"
-Related Subjects = "Sujets similaires"
+Related Subjects = "Sujets associés"
 Remove Filters = "Effacer les filtres"
 Remove from Book Bag = "Retirer du panier"
 Renewed = "Renouvelé"
